fix svg action buttons not showing up properly

--- a/src/styles.css
+++ b/src/styles.css
@@ -358,6 +358,23 @@ body {
         margin-left: 2rem;
     }
 
+    .projects .project-list .project svg {
+        display: none;
+        
+    }
+
+    .projects .project-list .project.current-selected svg {
+        display: block;
+    }
+
+    .todo-list .task .action svg {
+        display: none;
+    }
+
+    .todo-list .task.active .action svg {
+        display: block;
+    }
+    
     
 }
 
